# FishDex

./: .gitignore
BackEndProject/: .gitignore  CLAUDE.md  FishDex.sln
BackEndProject/ApiGateway/: ApiGateway.csproj  Program.cs  appsettings.json  ocelot.json
BackEndProject/AquaHome/AquaHome.API/: AquaHome.API.csproj  Program.cs  appsettings.Development.json  appsettings.Docker.json  appsettings.json
BackEndProject/AquaHome/AquaHome.Domain/: AquaHome.Domain.csproj
BackEndProject/AquaHome/AquaHome.EFCore/: AquaHome.EFCore.csproj
BackEndProject/FishDex/FishDex.API/: FishDex.API.csproj  FishDex.API.http  Program.cs  appsettings.Development.json  appsettings.Docker.json  appsettings.json
BackEndProject/Pipeline/: docker-compose.yml
BackEndProject/Pipeline/FishDexLocal/: Dockerfile.api  (+5 more)
FrontEnd/: .dockerignore  .env.example  .gitignore  README.md  index.html  package-lock.json  package.json
FrontEnd/Todo/: Epic5_AquaHomeFE.md  RequestBETask_FavoriteFish.md  RequestBETask_FishImage.md
FrontEnd/src/: index.css  router.tsx  vite-env.d.ts
Pipeline/: README.md
Pipeline/AquaHomeLocal/: .env.example  Dockerfile.api  docker-compose.yml
Pipeline/FishDexLocal/: .env.example  Dockerfile.api  docker-compose.yml  fish_inspect.py  post_etl.sql  requirements.txt
Pipeline/FrontEndLocal/: .env.example  docker-compose.yml
Pipeline/Preprocessor/: preprocess.py  pyproject.toml
Pipeline/UserManagementLocal/: .env.example  Dockerfile.api  docker-compose.yml
Pipeline/azure-devops/: aquahome-pipeline.yml  fishdex-pipeline.yml
Pipeline/github-actions/: fishdex.yml
(+288 files in other folders)
