[project]
name = "fishlover-preprocessor"
version = "0.1.0"
description = "FishBase parquet → chunked text for RAG pipeline"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "tiktoken>=0.7.0",
    "tqdm>=4.66.0",
]

[project.scripts]
preprocess = "preprocessor.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
